Refactor deprecated api usage